<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".template.TemplateActivity">

	<include
		android:id="@+id/toolbar_actionbar"
		layout="@layout/toolbar"/>

	<no.nordicsemi.android.nrftoolbox.widget.ForegroundRelativeLayout
		style="@style/HeaderShadow"
		android:background="@layout/gradient"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!-- The size of text below must be fixed, therefore dp are used instead of sp -->

		<no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:visibility="gone"
			android:layout_marginLeft="@dimen/template_feature_title_long_margin"
			android:rotation="270"
			android:text="@string/template_feature_title_long"
			android:textColor="@color/darkGray"
			android:textSize="32dp"
			android:textStyle="bold"
			android:id="@+id/trebuchetBoldTextView5" />

		<TextView
			android:id="@+id/battery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="@dimen/feature_horizontal_margin"
			android:layout_marginTop="@dimen/feature_device_name_margin_top"
			android:background="@drawable/battery"
			android:freezesText="true"
			android:gravity="center"
			android:text="@string/not_available"
			android:textColor="#FFFFFF"
			android:textSize="12sp"
			android:visibility="gone"/>

		<no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView
			android:id="@+id/device_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="@dimen/feature_device_name_margin_top"
			android:layout_toRightOf="@+id/battery"
			android:ellipsize="end"
			android:freezesText="true"
			android:maxLines="1"
			android:text="@string/template_default_name"
			android:textAllCaps="true"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:visibility="gone"/>

		<!-- Application section -->

		<RelativeLayout
			style="@style/Widget.List"
			android:background="@color/blurred_light_medium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/activity_vertical_margin_bottom"
			android:orientation="vertical"
			android:id="@+id/relativeLayout" >

			<TableLayout
				android:layout_width="match_parent"
				android:layout_height="82dp"
				android:layout_alignBottom="@+id/relativeLayout"
				android:layout_alignStart="@+id/relativeLayout"
				android:layout_marginTop="@dimen/feature_table_layout_margin_top"
				android:padding="@dimen/feature_section_padding"
				android:id="@+id/tableLayout" >

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="70dp">

					<no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView
						android:id="@+id/type"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:freezesText="true"
						android:gravity="left"
						android:text="@string/not_available_value"
						android:textSize="30sp" />

					<no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView
						android:id="@+id/value"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:freezesText="true"
						android:gravity="center"
						android:text="@string/not_available_value"
						android:textSize="30sp" />

					<no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView
						android:id="@+id/value_unit"
						android:layout_width="45dp"
						android:layout_height="match_parent"
						android:freezesText="true"
						android:gravity="right"
						android:text=" - "
						android:textSize="25sp"
						/>
				</TableRow>
			</TableLayout>
		</RelativeLayout>

		<com.github.mikephil.charting.charts.LineChart
			android:id="@+id/chart1"
			android:layout_width="match_parent"
			android:layout_height="435dp"
			android:layout_above="@+id/action_connect"
			android:layout_alignParentStart="true" />


		<Button
			android:id="@+id/action_connect"
			style="@style/Widget.Connect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="12dp"
			android:layout_marginStart="13dp"
			android:layout_toEndOf="@+id/trebuchetBoldTextView5"
			android:onClick="onConnectClicked"
			android:text="@string/action_connect" />

		<Button
			android:id="@+id/action_upload"
			style="@style/Widget.Connect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_below="@+id/chart1"
			android:layout_marginEnd="13dp"
			android:onClick="onUploadClicked"
			android:text="@string/action_upload" />

		<Button
			android:id="@+id/action_change_type"
			style="@style/Widget.Write"
			android:layout_width="wrap_content"
			android:layout_height="30dp"
			android:layout_marginTop="55dp"
			android:layout_marginLeft="5dp"
			android:onClick="onChangeTypeClicked"
			android:text="@string/action_change"
			android:textSize="10dp"/>


		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="6dp"
			android:src="@drawable/background_title"
			android:visibility="gone" />

	</no.nordicsemi.android.nrftoolbox.widget.ForegroundRelativeLayout>

</LinearLayout>

